fix footer background on mobile

--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -1037,7 +1037,7 @@ footer:hover .box-border {
 }
 .footer-background{
 
-  height: 45vh;
+  height: 55vh;
 
 }
   h1 {
@@ -1134,7 +1134,7 @@ footer:hover .box-border {
   }
   .footer-background{
 
-  height: 50vh;
+  height: 58vh;
 
 }
 }
